--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ minima:
       icon: github
       url: "https://github.com/subeenregmi"
     - title: youtube
-      icon: x-youtube
-      url: "https://youtube.com/subeenregmi"
+      icon: youtube
+      url: "https://youtube.com/@subeenregmi"
